<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BmiDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_bmi_detail_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:gravity="center"
                android:text="@string/activity_bmi_detail_txt_title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/activity_bmi_detail_text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="40sp"
                android:layout_marginRight="40sp"
                android:text="@string/activity_bmi_detail_txt_date" />

            <TextView
                android:id="@+id/activity_bmi_detail_text_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="40sp"
                android:layout_marginRight="40sp"
                android:text="@string/activity_bmi_detail_txt_weight" />

            <TextView
                android:id="@+id/activity_bmi_detail_text_bmi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="40sp"
                android:layout_marginRight="40sp"
                android:text="@string/activity_bmi_detail_txt_bmi" />

            <Button
                android:id="@+id/activity_bmi_detail_btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:text="@string/activity_bmi_detail_txt_btn_delete" />

            <Button
                android:id="@+id/activity_bmi_detail_btn_back"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:text="@string/activity_bmi_detail_txt_btn_back" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>